Adding in more datatypes (bools, dates, times, etc.)
Still some quirks to work out, specifically Date decoding. Not quite
working yet ;-)

--- a/plugins/tech/arrow/src/main/resources/org/apache/hop/arrow/transforms/arrowdecode/messages/messages_en_US.properties
+++ b/plugins/tech/arrow/src/main/resources/org/apache/hop/arrow/transforms/arrowdecode/messages/messages_en_US.properties
@@ -17,10 +17,10 @@
 ArrowDecodeDialog.Shell.Title=Arrow Decode
 ArrowDecodeDialog.TransformName.Label=Transform name
 ArrowDecodeDialog.SourceField.Label=Source field
-ArrowDecodeDialog.Fields.Label=Source fields
-ArrowDecodeDialog.Fields.Column.SourceField=Arrow field
-ArrowDecodeDialog.Fields.Column.SourceType=Arrow type
-ArrowDecodeDialog.Fields.Column.TargetField=Target field name
+ArrowDecodeDialog.Fields.Label=Source Arrow Vector fields
+ArrowDecodeDialog.Fields.Column.SourceField=Arrow field name
+# ArrowDecodeDialog.Fields.Column.SourceType=Arrow type
+ArrowDecodeDialog.Fields.Column.TargetField=Hop field name
 ArrowDecodeDialog.Fields.Column.TargetType=Hop type
 ArrowDecodeDialog.Fields.Column.TargetFormat=Format
 ArrowDecodeDialog.Fields.Column.TargetLength=Length
