Add support for batch sizes during encoding
Adds a gui input to allow setting the batch size. Will influence memory
pre-allocation for vectors.

Implements are arbitrary minimum allocation size to help guard against
awkwardly small batch sizes. (Should revisit the use of .set() calls and
see if we should use setSafe() or proactively try to detect the need for
additional memory allocation.)

--- a/plugins/tech/arrow/src/main/resources/org/apache/hop/arrow/transforms/arrowencode/messages/messages_en_US.properties
+++ b/plugins/tech/arrow/src/main/resources/org/apache/hop/arrow/transforms/arrowencode/messages/messages_en_US.properties
@@ -17,7 +17,7 @@
 ArrowEncodeDialog.Shell.Title=Arrow Encode
 ArrowEncodeDialog.TransformName.Label=Transform name
 ArrowEncodeDialog.OutputField.Label=Output field name
-ArrowEncodeDialog.SchemaName.Label=Schema name
+ArrowEncodeDialog.BatchSize.Label=Batch size
 ArrowEncodeDialog.Fields.Label=The fields to encode in a generic Arrow RecordBatch: 
 ArrowEncodeDialog.Fields.Column.SourceField=Input field name
 ArrowEncodeDialog.Fields.Column.TargetField=Target Arrow field name
